--- a/opensrp-anc/src/main/resources/anc_profile.properties
+++ b/opensrp-anc/src/main/resources/anc_profile.properties
@@ -72,7 +72,7 @@ anc_profile.step7.caffeine_intake.label = Daily caffeine intake
 anc_profile.step6.medications.options.metoclopramide.text = Metoclopramide
 anc_profile.step8.hiv_risk_counselling_toaster.toaster_info_title = HIV risk counseling
 anc_profile.step4.surgeries.options.cervical_cone.text = Partial removal of the cervix (cervical cone)
-anc_profile.step5.flu_immun_status.label = Flu immunisation status
+anc_profile.step5.flu_immun_status.label = Covid immunisation status
 anc_profile.step7.alcohol_substance_use.label = Uses alcohol and/or other substances?
 anc_profile.step1.occupation_other.v_required.err = Please specify your occupation
 anc_profile.step7.alcohol_substance_use.options.other.text = Other (specify)
@@ -129,7 +129,7 @@ anc_profile.step2.sfh_gest_age_selection.v_required.err = Please select preferre
 anc_profile.step2.sfh_ultrasound_gest_age_selection.options.ultrasound.text = Using ultrasound
 anc_profile.step5.tt_immun_status.options.ttcv_not_received.text = No doses
 anc_profile.step3.prev_preg_comps.options.vacuum_delivery.text = Forceps
-anc_profile.step5.flu_immunisation_toaster.text = Flu immunisation recommended
+anc_profile.step5.flu_immunisation_toaster.text = Covid immunisation recommended
 anc_profile.step3.prev_preg_comps.options.alcohol_use.text = Alcohol use
 anc_profile.step2.ultrasound_gest_age_selection.options.ultrasound.text = Using ultrasound
 anc_profile.step3.substances_used_other.hint = Specify
