--- a/opensrp-anc/src/main/resources/profile_overview.properties
+++ b/opensrp-anc/src/main/resources/profile_overview.properties
@@ -58,8 +58,8 @@ profile_overview.malaria_prophylaxis.iptp_sp_dose_3 = IPTp-SP dose 3
 profile_overview.immunisation_status.tt_immunisation_status = Td immunisation status
 profile_overview.immunisation_status.tt_dose_1 = Td dose #1
 profile_overview.immunisation_status.tt_dose_2 = Td dose #2
-profile_overview.immunisation_status.flu_immunisation_status = Flu immunisation status
-profile_overview.immunisation_status.flu_dose = Flu dose
+profile_overview.immunisation_status.flu_immunisation_status = Covid immunisation status
+profile_overview.immunisation_status.flu_dose = Covid dose
 profile_overview.blood_pressure.bp = Blood Pressure
 profile_overview.overview_of_pregnancy.lmp.lmp_known= LMP
 profile_overview.overview_of_pregnancy.weight.first_weight = First Weight
