--- a/opensrp-anc/src/main/resources/tests_syphilis_sub_form.properties
+++ b/opensrp-anc/src/main/resources/tests_syphilis_sub_form.properties
@@ -37,3 +37,5 @@ tests_syphilis_sub_form.step1.syph_test_status.options.ordered.text = Ordered
 tests_syphilis_sub_form.step1.rapid_syphilis_test.label = Rapid syphilis test (RST)
 tests_syphilis_sub_form.step1.rpr_syphilis_test.label = Rapid plasma reagin (RPR) test
 tests_syphilis_sub_form.step1.lab_syphilis_test.label = Off-site lab test for syphilis
+
+tests_syphilis_sub_form.step1.syph_test_status.done_today= Done today
