--- a/opensrp-anc/src/main/resources/anc_register.properties
+++ b/opensrp-anc/src/main/resources/anc_register.properties
@@ -6,7 +6,7 @@ anc_register.step1.home_address.hint = Home address
 anc_register.step1.village_address.hint = Village address
 anc_register.step1.alt_name.v_regex.err = Please enter a valid VHT name
 anc_register.step1.anc_id.hint = ANC ID
-anc_register.step1.anc_card_id.hint= Main Registration number
+anc_register.step1.card_id.hint= Main Registration number
 anc_register.step1.alt_phone_number.v_numeric.err = Phone number must be numeric
 anc_register.step1.age_entered.v_numeric.err = Age must be a number
 anc_register.step1.phone_number.hint = Mobile phone number
@@ -28,7 +28,7 @@ anc_register.step1.first_name.v_regex.err = Please enter a valid name
 anc_register.step1.reminders.options.yes.text = Yes
 anc_register.step1.phone_number.v_numeric.err = Phone number must be numeric
 anc_register.step1.anc_id.v_required.err = Please enter the Woman's ANC ID
-anc_register.step1.anc_card_id.v_required.err = Please enter the Woman's ANC Card ID
+anc_register.step1.card_id.v_required.err = Please enter the Woman's ANC Card ID
 anc_register.step1.last_name.hint = Last name
 anc_register.step1.age_entered.v_required.err = Please enter the woman's age
 anc_register.step1.phone_number.v_required.err = Please specify the woman's phone number
