--- a/opensrp-anc/src/main/assets/rule/profile_calculation_rules.yml
+++ b/opensrp-anc/src/main/assets/rule/profile_calculation_rules.yml
@@ -27,6 +27,13 @@ condition: "step2_ultrasound_done== 'yes' && step2_ultrasound_gest_age_days != '
 actions:
   - "calculation = Math.ceil(((step2_ultrasound_gest_age_wks * 7) + new Integer(step2_ultrasound_gest_age_days)) / 7)"
 ---
+name: step2_ultrasound_done_date
+description: step2_ultrasound_done_date
+priority: 1
+condition: "step2_ultrasound_done == 'yes'"
+actions:
+  - "calculation = helper.getDateToday()"
+---
 name: step2_ultrasound_edd
 description: Ultrasound edd
 priority: 1
